# firefly-transaction-merger

./: .dockerignore  .gitignore  CLEANUP_TASKS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  firefly_client.py  main.py  matcher.py  merge_service.py  pyproject.toml  pyrightconfig.json  utils.py
.github/workflows/: docker.yml
static/: styles.css
templates/: base.html  bulk_merge_result.html  login.html  merge_result.html  results.html  search.html
test/: match_test_1_bus_day.csv  test_matcher.py
