[project]
name = "firefly-transaction-merger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "firefly-iii-api-client>=6.2.21.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
